[gd_scene load_steps=16 format=2]

[ext_resource path="res://Components/MainMenuComponents/ExitPanel/Textures/ExitPanelBG.tres" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/StarIcon.png" type="Texture" id=2]
[ext_resource path="res://Components/WorldMapComponents/LevelInformation/LevelInformation.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/source-sans-pro/SourceSansPro-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Fonts/source-sans-pro/SourceSansPro-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Components/Button/Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Fonts/source-sans-pro/SourceSansPro-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Textures/TimerIcon.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=7]
outline_size = 1
extra_spacing_top = -3
extra_spacing_bottom = -4
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 1
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 24
outline_size = 1
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
extra_spacing_top = -8
extra_spacing_bottom = -5
extra_spacing_char = 4
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
extra_spacing_top = -3
extra_spacing_bottom = -4
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 24
outline_size = 1
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="LevelInfo" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Info" type="VBoxContainer" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -120.0
margin_right = 236.0
margin_bottom = -70.0
alignment = 1

[node name="LevelTitle3" type="Label" parent="Control/Info"]
margin_right = 220.0
margin_bottom = 14.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "High Score"
valign = 1

[node name="Record" type="HBoxContainer" parent="Control/Info"]
margin_top = 18.0
margin_right = 220.0
margin_bottom = 50.0
custom_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Info/Record"]
margin_right = 100.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 0 )

[node name="TextureRect" type="TextureRect" parent="Control/Info/Record/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 8 )
expand = true

[node name="LevelTitle3" type="Label" parent="Control/Info/Record/HBoxContainer"]
margin_left = 36.0
margin_right = 94.0
margin_bottom = 32.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "00 : 20"
align = 1
valign = 1

[node name="VBoxContainer" type="HBoxContainer" parent="Control/Info/Record"]
margin_left = 120.0
margin_right = 220.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 0 )

[node name="TextureRect2" type="TextureRect" parent="Control/Info/Record/VBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 2 )
expand = true

[node name="LevelTitle4" type="Label" parent="Control/Info/Record/VBoxContainer"]
margin_left = 36.0
margin_right = 49.0
margin_bottom = 32.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "S"
align = 1
valign = 1

[node name="Top" type="NinePatchRect" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -72.0
margin_right = 264.0
margin_bottom = -8.0
texture = ExtResource( 1 )
patch_margin_left = 6
patch_margin_top = 8
patch_margin_right = 6
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Top"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
alignment = 1

[node name="LevelNumber" type="Label" parent="Control/Top/VBoxContainer"]
margin_top = 14.0
margin_right = 248.0
margin_bottom = 32.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level 00"

[node name="LevelTitle" type="Label" parent="Control/Top/VBoxContainer"]
margin_top = 36.0
margin_right = 248.0
margin_bottom = 50.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "The Forest of Smooth"
valign = 1

[node name="LevelTitle2" type="Label" parent="Control/Top/VBoxContainer"]
visible = false
margin_top = 77.0
margin_right = 232.0
margin_bottom = 108.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "RECORD"
align = 1
valign = 1

[node name="ButtonGroup" type="HBoxContainer" parent="Control/Top"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 44.0
margin_bottom = 81.0
custom_constants/separation = 50
alignment = 1

[node name="Back" parent="Control/Top/ButtonGroup" instance=ExtResource( 6 )]
margin_left = 62.0
margin_right = 132.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 3 )
text = "BACK"

[node name="Enter" parent="Control/Top/ButtonGroup" instance=ExtResource( 6 )]
margin_left = 182.0
margin_right = 265.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 3 )
text = "ENTER"
